in progress edits

--- a/index.html
+++ b/index.html
@@ -60,17 +60,16 @@
 
         <p><b>Mass General Cancer Center | Dec. 2023 - May 2025</b><br>
           Worked with Dr. Kelly Irwin on virtual cancer and mental health tumor board trial to increase the reach of person-centered cancer care for adults with SMI and cancer at a community cancer center affiliate.
-          <a href="https://www.dfhcc.harvard.edu/events/dfhcc-celebration-of-early-career-investigators/home">DF/HCC Celebration of Early Career Investigators in Cancer Research 2024</a> 
-          (<a href="https://drive.google.com/file/d/1P38V5D4rVbXiHLwr4TseZCxIARSvXiSJ/view?usp=sharing">Poster</a>). 
-          <a href="https://psych.hms.harvard.edu/research-day-mysell-lecture">Harvard Psychiatry Research Day 2025</a>
-          (<a href="https://drive.google.com/file/d/1FoMTqDg9ktYxXomkCGvu88pN_zyYlsnI/view?usp=sharing">Poster</a>). 
-          <a href="https://www.massgeneral.org/psychiatry/treatments-and-services/division-of-public-and-community-psychiatry">2025 MGB Public and Community Psychiatry Symposium</a>
+          Poster presentations at DF/HCC Celebration of Early Career Investigators in Cancer Research 2024
+          (<a href="https://drive.google.com/file/d/1P38V5D4rVbXiHLwr4TseZCxIARSvXiSJ/view?usp=sharing">Poster</a>), 
+          Harvard Psychiatry Research Day 2025
+          (<a href="https://drive.google.com/file/d/1FoMTqDg9ktYxXomkCGvu88pN_zyYlsnI/view?usp=sharing">Poster</a>),
+          and 2025 MGB Public and Community Psychiatry Symposium
           (<a href="https://drive.google.com/file/d/1qk5F9XFG9tEKoZjzFWBQBkX0o9VuOJ1O/view?usp=sharing">Poster</a>).
         </p>
 
         <p><b>UW Design, Use, Build Alliance REU | June 2022 - Aug. 2022</b><br>
           Conducted language analysis relating user reviews of mental health apps to expert ratings by <a href="https://onemindpsyberguide.org/">One Mind PsyberGuide</a>. Advised by Profs. Gary Hsieh and Tanu Mitra.
-          <a href="https://drive.google.com/file/d/1UTkPYxacM4jdmFDegQs642QW6Jlmwi3B/view?usp=sharing">Poster</a>.
         </p>
 
         <p><b>Honors Thesis Research in Cognitive Science | June 2021 - Dec 2023</b><br>
@@ -82,12 +81,12 @@
         <p><b>CMU Human-Computer Interaction Institute REU | June 2021 - Jan 2023</b><br>
         Developed <a href="https://pinmi-summer.netlify.app/">prototype</a> to train nurses learning motivational interviewing and iterated on design through user testing.
         Researched and wrote on design rationale, e.g., application of role-playing, peer feedback, and reflection.
-        Advised by Profs. Laura Dabbish and Robert Kraut. <a href="https://dl.acm.org/doi/10.1145/3544548.3581551">CHI 2023 paper</a>. <a href="https://drive.google.com/file/d/1huKhBgcuVSJAw5O4io6QdvJZJvOm1PeU/view?usp=sharing">Poster</a>.
+        Advised by Profs. Laura Dabbish and Robert Kraut. <a href="https://dl.acm.org/doi/10.1145/3544548.3581551">CHI 2023 paper</a>.
         </p>
 
         <p><b>MindCORE Lila R. Gleitman Fellowship | June 2019 - Aug. 2019</b><br>
         Piloted study examining whether people find it more difficult to make predictions for people who think differently from them. 
-        Presented 15-minute talk at research symposium. Advised by Prof. John McCoy. <a href="https://docs.google.com/presentation/d/1PLDHcEl-Ke7CRfSLh_VXU5edvKhBsjSr/edit?usp=sharing&ouid=110172381656576566280&rtpof=true&sd=true">Talk slides</a>.
+        Presented 15-minute talk at research symposium. Advised by Prof. John McCoy.
         </p>
 
         <p><b>USC Brain and Creativity Institute | June 2016 - June 2018</b><br>
@@ -111,7 +110,7 @@
 
         <p><b>Fulphil: Project Management | Aug. 2019 - June 2020</b><br>
         Created social entrepreneurship curriculum for distribution in schools nationwide.
-        <a href="https://fulphil.teachable.com/p/social-entrepreneurship">Curriculum</a>. <a href="https://issuu.com/tiffany.yau/docs/12_10_impact_report_design_draft__2_">Impact report</a>.</p>
+        <a href="https://fulphil.teachable.com/p/social-entrepreneurship">Curriculum</a>.</p>
 
         <h2>Teaching</h2>
         <p><b>Penn Engineering: CIS 7000 Teaching Assistant | Jan. 2023 - May 2023</b><br>
