--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
       </header>
       <section>
           <p>I am currently a Clinical Research Coordinator at Massachusetts General Hospital. 
-            I graduated in December 2022 with a dual degree from The Wharton School and University of Pennsylvania, where I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics. I completed pre-medical postbaccalaureate coursework at Harvard Extension School. 
+            I graduated in December 2022 with a dual degree from University of Pennsylvania, where I pursued studies in three schools (Wharton, College, Engineering); I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics. I completed pre-medical postbaccalaureate coursework at Harvard Extension School. 
 
         <p>My research experience lies across health services, health equity, AI ethics, human-computer interaction, machine learning, natural language processing, and computational social science.
-          My work at <a href="https://www.massgeneral.org/cancer-center">Mass General Cancer Center</a> involved managing a pilot study of a virtual cancer and mental health tumor board, focusing on health disparities among individuals with serious mental illness and cancer.
-          My honors thesis involved the use of natural language generation with the goal of aiding peer counselors in generating messages employing the skill of reflection.  
-          In 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">Carnegie Mellon's Human-Computer Interaction Institute</a>, developing a platform for training nurses to conduct 
+          At <a href="https://www.massgeneral.org/cancer-center">Mass General Cancer Center</a>, I managed a study of a virtual cancer and mental health tumor board, focusing on health disparities among individuals with serious mental illness and cancer.
+          My honors thesis involved the use of natural language generation with the goal of aiding peer counselors in generating messages incorporating reflective listening.  
+          In 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">CMU's Human-Computer Interaction Institute</a>, developing a platform for training nurses in
           motivational interviewing and framing the evidence-based design of the prototype.
 
         <p>I have spent time at non-profits, startups, and a software company. Currently, I help support the care of patients at the MGH street team clinic of <a href="https://www.bhchp.org/">Boston Health Care for the Homeless Program</a>.
@@ -47,19 +47,19 @@
           building a curriculum to empower the next generation of social entrepreneurs at <a
           href="https://fulphil.org/">Fulphil</a>, and underscoring customer value in enterprise software at <a href="https://www.servicenow.com/">ServiceNow</a>.</p>
 
-        <p>Over the years, I have volunteered as a crisis counselor at hotlines, formerly at <a href="https://www.teenline.org/">Teen Line</a> and since then, at <a href="https://www.crisistextline.org/">Crisis Text Line</a>. My mission is to help support people and their health.</p>
+        <p>Over the years, I have volunteered as a crisis counselor at hotlines, formerly at <a href="https://www.teenline.org/">Teen Line</a> and since then, at <a href="https://www.crisistextline.org/">Crisis Text Line</a>. My mission is to support people and their health.</p>
 
         <h2>Research</h2>
-        <p><b>Dept. of Psychiatry, Massachusetts General Hospital | June 2025 - Present</b><br>
-          Work with Dr. Katherine Koh on street psychiatry research.
+        <p><b>Massachusetts General Hospital | June 2025 - Present</b><br>
+          Creating national street psychiatry survey with Dr. Katherine Koh and applying AI to draw insights from street outreach and home visit notes of our Boston street team (BHCHP).
         </p>
         
-        <p><b>Dept. of Medicine, Mass General Brigham | May 2024 - Present</b><br>
+        <p><b>Mass General Brigham | May 2024 - Present</b><br>
           Collaborate with Dr. Lisa Lehmann on research on ethical considerations of a medical AI application.
         </p>
 
         <p><b>Mass General Cancer Center | Dec. 2023 - May 2025</b><br>
-          Worked with Dr. Kelly Irwin on virtual cancer and mental health tumor board trial to increase the reach of person-centered cancer care for adults with SMI and cancer at a community cancer center affiliate.
+          Led virtual cancer and mental health tumor board trial with Dr. Kelly Irwin to increase  reach of person-centered cancer care for adults with SMI and cancer at to community oncology settings.
           Poster presentations at DF/HCC Celebration of Early Career Investigators in Cancer Research 2024
           (<a href="https://drive.google.com/file/d/1P38V5D4rVbXiHLwr4TseZCxIARSvXiSJ/view?usp=sharing">Poster</a>), 
           Harvard Psychiatry Research Day 2025
@@ -69,23 +69,23 @@
         </p>
 
         <p><b>UW Design, Use, Build Alliance REU | June 2022 - Aug. 2022</b><br>
-          Conducted language analysis relating user reviews of mental health apps to expert ratings by <a href="https://onemindpsyberguide.org/">One Mind PsyberGuide</a>. Advised by Profs. Gary Hsieh and Tanu Mitra.
+          Developed project applying computational language analysis tools to explore relation between health apps' user reviews and <a href="https://onemindpsyberguide.org/">One Mind PsyberGuide</a> expert ratings. Advised by Profs. Gary Hsieh and Tanu Mitra.
         </p>
 
         <p><b>Honors Thesis Research in Cognitive Science | June 2021 - Dec 2023</b><br>
-        Applied natural language generation to aid peer counselors in generating messages employing reflection. Gathered cross-institutional support and resources from CMU and current Stanford faculty. Primarily advised by Prof. Lyle Ungar.
+        Applied natural language generation to draft messages for peer counselors using skill of reflection. Gathered cross-institutional support and resources from current CMU and Stanford faculty. Advised by Prof. Lyle Ungar.
         <a href="https://aclanthology.org/2023.gem-1.6/">EMNLP GEM 2023 paper</a>.
         <a href="https://web.sas.upenn.edu/cogsci/awards/">First recipient of Glushko Award at Penn</a>.
         </p>
 
         <p><b>CMU Human-Computer Interaction Institute REU | June 2021 - Jan 2023</b><br>
-        Developed <a href="https://pinmi-summer.netlify.app/">prototype</a> to train nurses learning motivational interviewing and iterated on design through user testing.
+        Developed <a href="https://pinmi-summer.netlify.app/">prototype</a> to train nurses in motivational interviewing and iterated on design through user testing.
         Researched and wrote on design rationale, e.g., application of role-playing, peer feedback, and reflection.
         Advised by Profs. Laura Dabbish and Robert Kraut. <a href="https://dl.acm.org/doi/10.1145/3544548.3581551">CHI 2023 paper</a>.
         </p>
 
-        <p><b>MindCORE Lila R. Gleitman Fellowship | June 2019 - Aug. 2019</b><br>
-        Piloted study examining whether people find it more difficult to make predictions for people who think differently from them. 
+        <p><b>MindCORE Fellowship in Interdisciplinary Mind and Brain Studies | June 2019 - Aug. 2019</b><br>
+        Designed and executed study examining whether people predict others exhibit the false consensus effect and accuracy of people's predictions for people like them and different from them.
         Presented 15-minute talk at research symposium. Advised by Prof. John McCoy.
         </p>
 
@@ -95,46 +95,29 @@
   
         <h2>For-profits and Non-profits </h2>
         <p><b>Boston Health Care for the Homeless Program | Nov 2024 - Present</b><br>
-        Volunteer at <a href="https://www.bhchp.org/services/street-team/">street team</a> clinic at MGH, which integrates the care on the streets within the mainstream of the hospital. Take vital signs, distribute harm reduction supplies and care products, and connect with patients.
+        Volunteer at <a href="https://www.bhchp.org/services/street-team/">street team</a> clinic at MGH, which integrates the care on the streets within the mainstream of the hospital. Take vital signs, distribute harm reduction supplies and care products, and talk with patients.
 
         <p><b>Vanna Health: Software Engineering | Feb. 2023 - June 2023</b><br>
-        Worked as front-end engineer to build Vanna's member relationship management system to support <a href="https://www.vanna.health/our-approach">Vanna Coaches</a> who work with members to develop personalized recovery programs for people with serious mental illness.</p>
+        Worked as front-end engineer to build Vanna's member relationship management system to support <a href="https://www.vanna.health/our-approach">Vanna Coaches</a> who work with members with serious mental illness.</p>
 
         <p><b>Endeavor: Entrepreneurship Selection & Growth | Dec. 2020 - May 2021</b><br>
-        Wrote business profiles to inform evaluation in <a href="https://endeavor.org/stories/100-isp-dublin-31-new-high-impact-entrepreneurs/">International Selection Panels</a>. Spearheaded project for targeting socially diverse entrepreneurs, 
-        researching and presenting female and minority-founded tech companies.</p>
+        Wrote business profiles to inform evaluation in <a href="https://endeavor.org/stories/100-isp-dublin-31-new-high-impact-entrepreneurs/">International Selection Panels</a>. Jump-started project to target female and minority-founded companies with high-potential technology applications.</p>
 
         <p><b>ServiceNow: Value Management | May 2020 - Aug. 2020</b><br>
-        Created executive summaries for 15 customers across industries. Pioneered database of insights from 
-        <a href="https://knowledge.servicenow.com/">Knowledge 2020 conference</a> customer presentations.</p>
+        Created executive summaries for customers across industries. Mined metrics from 
+        <a href="https://knowledge.servicenow.com/">Knowledge 2020 conference</a> to gather customer insights for value management team.</p>
 
         <p><b>Fulphil: Project Management | Aug. 2019 - June 2020</b><br>
-        Created social entrepreneurship curriculum for distribution in schools nationwide.
+        Managed research for social entrepreneurship curriculum and was one of the earliest content developers.
         <a href="https://fulphil.teachable.com/p/social-entrepreneurship">Curriculum</a>.</p>
 
         <h2>Teaching</h2>
         <p><b>Penn Engineering: CIS 7000 Teaching Assistant | Jan. 2023 - May 2023</b><br>
-          TA for Algorithmic Justice graduate-level seminar at Penn taught by Prof. Danaé Metaxa. Developed <a href="http://cis4120.seas.upenn.edu/">course website</a> for Penn's HCI undergraduate offering with feedback from Prof. Andrew Head.</p>
+          TA for Algorithmic Justice graduate-level seminar at Penn taught by Prof. Danaé Metaxa. Developed <a href="http://cis4120.seas.upenn.edu/">course website</a> for Penn's HCI course used by both professors.</p>
 
         <p><b>Penn Engineering: CIS 3990 Teaching Assistant | Aug. 2022 - Dec. 2022</b><br>
           TA for <a href="https://magazine.seas.upenn.edu/fall-2023/coming-together-to-transform-tech/">first</a> Human-Computer Interaction undergraduate offering at Penn taught by Prof. Danaé Metaxa. 
           Held office hours, graded assignments, designed rubrics, and guided and graded a subset of team semester projects.</p>
-
-        <h2>Data Projects</h2>
-        <p><b>Mental Health Support on Reddit</b><br>
-        A <a href="https://oneilemma.medium.com/mental-health-support-on-reddit-64e5f3d38923?source=friends_link&sk=undefined">text analysis</a> 
-        of the social media mental health community: an exploration of mental health subreddits and a comparison with caption content of Instagram mental health influencers.</p>
-
-        <p><b>Understanding and Predicting Reported Mental Health</b><br>
-        A <a href="https://github.com/emoneil/reported-mental-health-project/blob/main/report/final-project-report-copy.pdf">report</a>
-        on predicting days one's mental health was not good in past month (BRFSS CDC) with socioeconomic variables, receival of clinical care, health factors, and mental health facilities offering resources by state (N-MHSS).</p>
-
-        <p><b>Female Founders in Tech</b><br>
-        A <a href="https://oneilemma.medium.com/the-underrepresentation-of-female-founders-in-tech-and-the-difference-in-employee-morale-f8da2b908738?source=friends_link&sk=2f1c9ac8c5eefa7e1eac2fd097b08122">data exploration</a> 
-        of founder gender representation in the tech industry and internal perceptions in male and female-founded tech companies.</p>
-
-        <p><b>Vegan in Philly</b><br>
-        A <a href="https://embracingplantfood.weebly.com/">data exploration</a> of vegan food in Philadelphia with Tableau.</p>
 
         <h2>Music</h2>
         <p><b>Violin and Songwriting</b><br>
