--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </p>
 
         <p><b>Mass General Cancer Center | Dec. 2023 - May 2025</b><br>
-          Led virtual cancer and mental health tumor board trial with Dr. Kelly Irwin to increase  reach of person-centered cancer care for adults with SMI and cancer at to community oncology settings.
+          Led virtual cancer and mental health tumor board trial with Dr. Kelly Irwin to increase  reach of person-centered cancer care for adults with SMI and cancer to community oncology settings.
           Poster presentations at DF/HCC Celebration of Early Career Investigators in Cancer Research 2024
           (<a href="https://drive.google.com/file/d/1P38V5D4rVbXiHLwr4TseZCxIARSvXiSJ/view?usp=sharing">Poster</a>), 
           Harvard Psychiatry Research Day 2025
