--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </p>
         
         <p><b>Mass General Brigham | May 2024 - Present</b><br>
-          Collaborate with Dr. Lisa Lehmann on research on ethical considerations of a medical AI application.
+          Collaborate with Dr. Lisa Lehmann on research on ethical considerations of ambient clinical intelligence (risks, benefits, recommendations).
         </p>
 
         <p><b>Mass General Cancer Center | Dec. 2023 - May 2025</b><br>
@@ -69,11 +69,11 @@
         </p>
 
         <p><b>UW Design, Use, Build Alliance REU | June 2022 - Aug. 2022</b><br>
-          Developed project applying computational language analysis tools to explore relation between health apps' user reviews and <a href="https://onemindpsyberguide.org/">One Mind PsyberGuide</a> expert ratings. Advised by Profs. Gary Hsieh and Tanu Mitra.
+          Developed project applying computational language analysis tools to explore relation between health apps' user reviews and <a href="https://onemindpsyberguide.org/">One Mind PsyberGuide</a> expert ratings of credibility and user experience. Advised by Drs. Gary Hsieh and Tanu Mitra.
         </p>
 
-        <p><b>Honors Thesis Research in Cognitive Science | June 2021 - Dec 2023</b><br>
-        Applied natural language generation to draft messages for peer counselors using skill of reflection. Gathered cross-institutional support and resources from current CMU and Stanford faculty. Advised by Prof. Lyle Ungar.
+        <p><b>Honors Thesis Research | June 2021 - Dec 2023</b><br>
+        Applied language generation to draft messages for peer counselors using skill of reflection. Gathered cross-institutional support and resources from current CMU and Stanford faculty. Advised by Dr. Lyle Ungar.
         <a href="https://aclanthology.org/2023.gem-1.6/">EMNLP GEM 2023 paper</a>.
         <a href="https://web.sas.upenn.edu/cogsci/awards/">First recipient of Glushko Award at Penn</a>.
         </p>
@@ -86,43 +86,43 @@
 
         <p><b>MindCORE Fellowship in Interdisciplinary Mind and Brain Studies | June 2019 - Aug. 2019</b><br>
         Designed and executed study examining whether people predict others exhibit the false consensus effect and accuracy of people's predictions for people like them and different from them.
-        Presented 15-minute talk at research symposium. Advised by Prof. John McCoy.
+        Presented 15-minute talk at research symposium. Advised by Dr. John McCoy.
         </p>
 
         <p><b>USC Brain and Creativity Institute | June 2016 - June 2018</b><br>
-        Conducted literature review of the effects of musical training on early reading development. Advised by Prof. Assal Habibi.
+        Conducted literature review of the effects of musical training on early reading development. Advised by Dr. Assal Habibi.
         <a href="https://dornsife.usc.edu/bci/brain-and-music-program/">Brain and Music Program</a>.</p>
   
         <h2>For-profits and Non-profits </h2>
-        <p><b>Boston Health Care for the Homeless Program | Nov 2024 - Present</b><br>
+        <p><b>Boston Health Care for the Homeless Program: Clinic Assistant | Nov 2024 - Present</b><br>
         Volunteer at <a href="https://www.bhchp.org/services/street-team/">street team</a> clinic at MGH, which integrates the care on the streets within the mainstream of the hospital. Take vital signs, distribute harm reduction supplies and care products, and talk with patients.
 
         <p><b>Vanna Health: Software Engineering | Feb. 2023 - June 2023</b><br>
-        Worked as front-end engineer to build Vanna's member relationship management system to support <a href="https://www.vanna.health/our-approach">Vanna Coaches</a> who work with members with serious mental illness.</p>
+        Worked as front-end engineer to build core features of member relationship management system to support <a href="https://www.vanna.health/our-approach">coaches</a> who work with members with serious mental illness.</p>
 
-        <p><b>Endeavor: Entrepreneurship Selection & Growth | Dec. 2020 - May 2021</b><br>
-        Wrote business profiles to inform evaluation in <a href="https://endeavor.org/stories/100-isp-dublin-31-new-high-impact-entrepreneurs/">International Selection Panels</a>. Jump-started project to target female and minority-founded companies with high-potential technology applications.</p>
+        <p><b>Endeavor: Entrepreneur Selection & Growth | Dec. 2020 - May 2021</b><br>
+        Wrote business profiles to inform evaluation in <a href="https://endeavor.org/stories/100-isp-dublin-31-new-high-impact-entrepreneurs/">International Selection Panels</a>. Jump-started project to target female and minority founders with high-potential technology applications.</p>
 
         <p><b>ServiceNow: Value Management | May 2020 - Aug. 2020</b><br>
-        Created executive summaries for customers across industries. Mined metrics from 
-        <a href="https://knowledge.servicenow.com/">Knowledge 2020 conference</a> to gather customer insights for value management team.</p>
+        Created executive summaries on customers across industries. Mined metrics from 
+        <a href="https://knowledge.servicenow.com/">Knowledge 2020 conference</a> to gather insights from customer presentations.</p>
 
         <p><b>Fulphil: Project Management | Aug. 2019 - June 2020</b><br>
-        Managed research for social entrepreneurship curriculum and was one of the earliest content developers.
+        Managed research for social entrepreneurship curriculum and was one of earliest content developers. Brainstormed with CEO on curriculum, marketing, and partnerships.
         <a href="https://fulphil.teachable.com/p/social-entrepreneurship">Curriculum</a>.</p>
 
         <h2>Teaching</h2>
         <p><b>Penn Engineering: CIS 7000 Teaching Assistant | Jan. 2023 - May 2023</b><br>
-          TA for Algorithmic Justice graduate-level seminar at Penn taught by Prof. Danaé Metaxa. Developed <a href="http://cis4120.seas.upenn.edu/">course website</a> for Penn's HCI course used by both professors.</p>
+          TA for Algorithmic Justice graduate-level seminar at Penn taught by Dr. Danaé Metaxa. Developed <a href="http://cis4120.seas.upenn.edu/">course website</a> for Penn's HCI course used by both professors.</p>
 
         <p><b>Penn Engineering: CIS 3990 Teaching Assistant | Aug. 2022 - Dec. 2022</b><br>
-          TA for <a href="https://magazine.seas.upenn.edu/fall-2023/coming-together-to-transform-tech/">first</a> Human-Computer Interaction undergraduate offering at Penn taught by Prof. Danaé Metaxa. 
+          TA for <a href="https://magazine.seas.upenn.edu/fall-2023/coming-together-to-transform-tech/">first</a> Human-Computer Interaction undergraduate offering at Penn taught by Dr. Danaé Metaxa. 
           Held office hours, graded assignments, designed rubrics, and guided and graded a subset of team semester projects.</p>
 
         <h2>Music</h2>
         <p><b>Violin and Songwriting</b><br>
-        Playing violin for 19 years. Write, perform, and produce music. 
-        Recognized as a semifinalist in February 2019 in the 
+        Playing violin for 19 years. Also write, perform, and produce music. 
+        Recognized as a semifinalist in 2019 in the 
         <a href="https://songwritingcompetition.com/">International Songwriting Competition</a>.
         <a href="https://music.apple.com/us/album/four-songs-ep/1266356645">Apple Music</a>.
         <a href="https://open.spotify.com/album/0M1N4q3VzROin9BomBE470?si=Qaw6aivKRJCdU9nNeUO0IQ">Spotify</a>.
