--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         Advised by Profs. Laura Dabbish and Robert Kraut. <a href="https://dl.acm.org/doi/10.1145/3544548.3581551">CHI 2023 paper</a>.
         </p>
 
-        <p><b>MindCORE Fellowship in Interdisciplinary Mind and Brain Studies | June 2019 - Aug. 2019</b><br>
+        <p><b>MindCORE Fellowship | June 2019 - Aug. 2019</b><br>
         Designed and executed study examining whether people predict others exhibit the false consensus effect and accuracy of people's predictions for people like them and different from them.
         Presented 15-minute talk at research symposium. Advised by Dr. John McCoy.
         </p>
@@ -94,7 +94,7 @@
         <a href="https://dornsife.usc.edu/bci/brain-and-music-program/">Brain and Music Program</a>.</p>
   
         <h2>For-profits and Non-profits </h2>
-        <p><b>Boston Health Care for the Homeless Program: Clinic Assistant | Nov 2024 - Present</b><br>
+        <p><b>Boston Health Care for the Homeless Program | Nov 2024 - Present</b><br>
         Volunteer at <a href="https://www.bhchp.org/services/street-team/">street team</a> clinic at MGH, which integrates the care on the streets within the mainstream of the hospital. Take vital signs, distribute harm reduction supplies and care products, and talk with patients.
 
         <p><b>Vanna Health: Software Engineering | Feb. 2023 - June 2023</b><br>
