--- a/index.html
+++ b/index.html
@@ -60,12 +60,10 @@
 
         <p><b>Mass General Cancer Center | Dec. 2023 - May 2025</b><br>
           Led virtual cancer and mental health tumor board trial with Dr. Kelly Irwin to increase  reach of person-centered cancer care for adults with SMI and cancer to community oncology settings.
-          Poster presentations at DF/HCC Celebration of Early Career Investigators in Cancer Research 2024
-          (<a href="https://drive.google.com/file/d/1P38V5D4rVbXiHLwr4TseZCxIARSvXiSJ/view?usp=sharing">Poster</a>), 
-          Harvard Psychiatry Research Day 2025
-          (<a href="https://drive.google.com/file/d/1FoMTqDg9ktYxXomkCGvu88pN_zyYlsnI/view?usp=sharing">Poster</a>),
-          and 2025 MGB Public and Community Psychiatry Symposium
-          (<a href="https://drive.google.com/file/d/1qk5F9XFG9tEKoZjzFWBQBkX0o9VuOJ1O/view?usp=sharing">Poster</a>).
+          Poster presentations:
+          <a href="https://drive.google.com/file/d/1P38V5D4rVbXiHLwr4TseZCxIARSvXiSJ/view?usp=sharing">DF/HCC Celebration of Early Career Investigators in Cancer Research 2024</a>, 
+          <a href="https://drive.google.com/file/d/1FoMTqDg9ktYxXomkCGvu88pN_zyYlsnI/view?usp=sharing">Harvard Psychiatry Research Day 2025</a>,
+          <a href="https://drive.google.com/file/d/1qk5F9XFG9tEKoZjzFWBQBkX0o9VuOJ1O/view?usp=sharing">2025 MGB Public and Community Psychiatry Symposium</a>.
         </p>
 
         <p><b>UW Design, Use, Build Alliance REU | June 2022 - Aug. 2022</b><br>
