--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <h2>Research</h2>
         <p><b>Massachusetts General Hospital | June 2025 - Present</b><br>
-          Creating national street psychiatry survey with Dr. Katherine Koh and applying AI to draw insights from street outreach and home visit notes of our Boston street team (BHCHP).
+          Designing national street psychiatry survey with Dr. Katherine Koh and applying AI to draw insights from street outreach and home visit notes of our Boston street team (BHCHP).
         </p>
         
         <p><b>Mass General Brigham | May 2024 - Present</b><br>
