--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <p><b>CMU Human-Computer Interaction Institute REU | June 2021 - Jan 2023</b><br>
         Developed <a href="https://pinmi-summer.netlify.app/">prototype</a> to train nurses in motivational interviewing and iterated on design through user testing.
         Researched and wrote on design rationale, e.g., application of role-playing, peer feedback, and reflection.
-        Advised by Profs. Laura Dabbish and Robert Kraut. <a href="https://dl.acm.org/doi/10.1145/3544548.3581551">CHI 2023 paper</a>.
+        Advised by Drs. Laura Dabbish and Robert Kraut. <a href="https://dl.acm.org/doi/10.1145/3544548.3581551">CHI 2023 paper</a>.
         </p>
 
         <p><b>MindCORE Fellowship | June 2019 - Aug. 2019</b><br>
