main description edits

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
         <p>I have spent time at non-profits, startups, and a software company. Currently, I help support the care of patients at the MGH street team clinic of <a href="https://www.bhchp.org/">Boston Health Care for the Homeless Program</a>.
           Prior to moving to Boston, I worked on building the member relationship management system MVP for <a href="https://www.vanna.health/">Vanna Health</a>, 
-          a company focused on providing psychosocial rehabilation at scale to improve outcomes and reduce healthcare costs. During my time at Penn, I focused on search and selection of entrepreneurs at <a href="https://endeavor.org/">Endeavor</a>,
+          a company focused on providing psychosocial rehabilation at scale to improve outcomes and reduce healthcare costs. While at Penn, I was involved in search and selection of entrepreneurs at <a href="https://endeavor.org/">Endeavor</a>,
           building a curriculum to empower the next generation of social entrepreneurs at <a
-          href="https://fulphil.org/">Fulphil</a>, and underscoring customer value in enterprise software at <a href="https://www.servicenow.com/">ServiceNow</a>.</p>
-
-        <p>Over the years, I have volunteered as a crisis counselor at hotlines, formerly at <a href="https://www.teenline.org/">Teen Line</a> and since then, at <a href="https://www.crisistextline.org/">Crisis Text Line</a>. My mission is to support people and their health.</p>
+          href="https://fulphil.org/">Fulphil</a>, and underscoring customer value in enterprise software at <a href="https://www.servicenow.com/">ServiceNow</a>. 
+          
+          Over the years, I have volunteered as a crisis counselor at hotlines, formerly at <a href="https://www.teenline.org/">Teen Line</a> and since then, at <a href="https://www.crisistextline.org/">Crisis Text Line</a>. I am committed to supporting people and their health.</p>
 
         <h2>Research</h2>
         <p><b>Massachusetts General Hospital | June 2025 - Present</b><br>
