--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </header>
       <section>
           <p>I am currently a Clinical Research Coordinator at Massachusetts General Hospital. 
-            I graduated in December 2022 with a dual degree from University of Pennsylvania, where I pursued studies in three schools (Wharton, College, Engineering); I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics. I completed pre-medical postbaccalaureate coursework at Harvard Extension School. 
+            I graduated in December 2022 with dual degrees from University of Pennsylvania, where I pursued studies in three schools (Wharton, College, Engineering); I majored in Statistics, Cognitive Science, and Computer Science and minored in Mathematics. I completed pre-medical postbaccalaureate coursework at Harvard Extension School. 
 
         <p>My research experience lies across health services, health equity, AI ethics, human-computer interaction, machine learning, natural language processing, and computational social science.
           At <a href="https://www.massgeneral.org/cancer-center">Mass General Cancer Center</a>, I managed a study of a virtual cancer and mental health tumor board, focusing on health disparities among individuals with serious mental illness and cancer.
