--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </p>
 
         <p><b>Mass General Cancer Center | Dec. 2023 - May 2025</b><br>
-          Led virtual cancer and mental health tumor board trial with Dr. Kelly Irwin to increase  reach of person-centered cancer care for adults with SMI and cancer to community oncology settings.
+          Led virtual cancer and mental health tumor board trial with Dr. Kelly Irwin to increase reach of person-centered cancer care for adults with SMI and cancer to community oncology settings.
           Poster presentations:
           <a href="https://drive.google.com/file/d/1P38V5D4rVbXiHLwr4TseZCxIARSvXiSJ/view?usp=sharing">DF/HCC Celebration of Early Career Investigators in Cancer Research 2024</a>, 
           <a href="https://drive.google.com/file/d/1FoMTqDg9ktYxXomkCGvu88pN_zyYlsnI/view?usp=sharing">Harvard Psychiatry Research Day 2025</a>,
@@ -93,7 +93,7 @@
   
         <h2>For-profits and Non-profits </h2>
         <p><b>Boston Health Care for the Homeless Program | Nov 2024 - Present</b><br>
-        Volunteer at <a href="https://www.bhchp.org/services/street-team/">street team</a> clinic at MGH, which integrates the care on the streets within the mainstream of the hospital. Take vital signs, distribute harm reduction supplies and care products, and talk with patients.
+        Volunteer at <a href="https://www.bhchp.org/services/street-team/">street team</a> clinic at MGH, which integrates care on the streets within the mainstream of the hospital. Take vital signs, distribute harm reduction supplies and care products, and talk with patients.
 
         <p><b>Vanna Health: Software Engineering | Feb. 2023 - June 2023</b><br>
         Worked as front-end engineer to build core features of member relationship management system to support <a href="https://www.vanna.health/our-approach">coaches</a> who work with members with serious mental illness.</p>
